@@ -628,8 +628,10 @@
 	"S_DISABLE_SELECTED_ITEMS_Q"=>		"Disable selected items?",
 	"S_DELETE_SELECTED_ITEMS_Q"=>		"Delete selected items?",
 	"S_EMAIL"=>				"Email",
-	"S_SCRIPT"=>				"Script",
+	"S_JABBER"=>				"Jabber",
+	"S_JABBER_IDENTIFIER"=>			"Jabber Identifier",
 	"S_SMS"=>				"SMS",
+	"S_SCRIPT"=>				"Script",
 	"S_GSM_MODEM"=>				"GSM modem",
 	"S_UNITS"=>				"Units",
 	"S_MULTIPLIER"=>			"Multiplier",
